--- a/test/Geta.Omnium.Test/packages.config
+++ b/test/Geta.Omnium.Test/packages.config
@@ -23,12 +23,13 @@
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="Omnium" version="3.5.1" targetFramework="net461" />
-  <package id="Omnium.EPiServer.Commerce" version="12.1.1" targetFramework="net461" />
-  <package id="Omnium.Public" version="3.6.0" targetFramework="net461" />
+  <package id="Omnium" version="4.0.0" targetFramework="net461" />
+  <package id="Omnium.EPiServer.Commerce" version="12.2.0" targetFramework="net461" />
+  <package id="Omnium.Public" version="3.8.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Net.WebSockets" version="4.0.0" targetFramework="net461" />
   <package id="System.Net.WebSockets.Client" version="4.0.0" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
@@ -36,10 +37,10 @@
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.4.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Xml" version="4.4.2" targetFramework="net461" />
   <package id="System.Security.Permissions" version="4.4.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="4.4.0" targetFramework="net461" />
