--- a/demo/Sources/EPiServer.Reference.Commerce.Manager/EPiServerFramework.config
+++ b/demo/Sources/EPiServer.Reference.Commerce.Manager/EPiServerFramework.config
@@ -1,4 +1,4 @@
-<episerver.framework>
+<episerver.framework updateDatabaseSchema="true">
   <scanAssembly forceBinFolderScan="true" />
   <appData basePath="../appdata" />
   <virtualRoles addClaims="true">
