--- a/demo/Sources/EPiServer.Reference.Commerce.Manager/Web.config
+++ b/demo/Sources/EPiServer.Reference.Commerce.Manager/Web.config
@@ -44,8 +44,8 @@
   </configSections>
   <connectionStrings>
     <clear />
-    <add name="EPiServerDB" connectionString="Data Source=.;Initial Catalog=Omnium.Quicksilver.Cms;Integrated Security=False;User ID=ChangeThis;Password=ChangeThis;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="EcfSqlConnection" connectionString="Data Source=.;Initial Catalog=Omnium.Quicksilver.Commerce;Integrated Security=False;User ID=ChangeThis;Password=ChangeThis;Connect Timeout=10;Application Name=ECApplication" providerName="System.Data.SqlClient" />
+    <add name="EPiServerDB" connectionString="Data Source=.;Initial Catalog=Omnium.Quicksilver.Cms;Integrated Security=False;User ID=Omnium.Quicksilver;Password=Episerver15;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="EcfSqlConnection" connectionString="Data Source=.;Initial Catalog=Omnium.Quicksilver.Commerce;Integrated Security=False;User ID=Omnium.Quicksilver;Password=Episerver15;Connect Timeout=10;Application Name=ECApplication" providerName="System.Data.SqlClient" />
     <add name="EPiServerAzureBlobs" connectionString="DefaultEndpointsProtocol=https;AccountName=ChangeThis;AccountKey=ChangeThis" />
     <add name="EPiServerAzureEvents" connectionString="Endpoint=sb://ChangeThis.servicebus.windows.net/;SharedAccessKeyName=ChangeThis;SharedAccessKey=ChangeThis" />
   </connectionStrings>
