--- a/test/Geta.Omnium.Test/Geta.Omnium.Test.csproj
+++ b/test/Geta.Omnium.Test/Geta.Omnium.Test.csproj
@@ -182,17 +182,17 @@
     <Reference Include="Moq, Version=4.10.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Moq.4.10.1\lib\net45\Moq.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Omnium, Version=4.0.0.19953, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Omnium.4.0.0\lib\net45\Omnium.dll</HintPath>
+    <Reference Include="Omnium, Version=6.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Omnium.6.0.1\lib\netstandard1.4\Omnium.dll</HintPath>
     </Reference>
     <Reference Include="Omnium.EPiServer.Commerce, Version=12.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Omnium.EPiServer.Commerce.12.2.0\lib\net45\Omnium.EPiServer.Commerce.dll</HintPath>
     </Reference>
-    <Reference Include="Omnium.Public, Version=3.8.0.17500, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Omnium.Public.3.8.0\lib\net45\Omnium.Public.dll</HintPath>
+    <Reference Include="Omnium.Public, Version=5.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Omnium.Public.5.0.1\lib\netstandard1.4\Omnium.Public.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Annotations, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
