--- a/src/Geta.Omnium/Geta.Omnium.nuspec
+++ b/src/Geta.Omnium/Geta.Omnium.nuspec
@@ -9,5 +9,6 @@
     <title>$title$</title>
     <iconUrl>https://cdn.geta.no/opensource/icons/Geta-logo-3.png</iconUrl>
     <projectUrl>https://github.com/Geta/Geta.Omnium</projectUrl>
+    <repository type="git" url="URL" branch="BRANCH_NAME" commit="COMMIT" />
   </metadata>
 </package>
