--- a/test/Geta.Omnium.Test/packages.config
+++ b/test/Geta.Omnium.Test/packages.config
@@ -4,11 +4,11 @@
   <package id="AutoFixture" version="4.6.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net461" />
-  <package id="EPiServer.CMS.AspNet" version="11.11.0" targetFramework="net461" />
-  <package id="EPiServer.CMS.Core" version="11.11.0" targetFramework="net461" />
-  <package id="EPiServer.Commerce.Core" version="12.15.1" targetFramework="net461" />
-  <package id="EPiServer.Framework" version="11.11.0" targetFramework="net461" />
-  <package id="EPiServer.Framework.AspNet" version="11.11.0" targetFramework="net461" />
+  <package id="EPiServer.CMS.AspNet" version="11.11.1" targetFramework="net461" />
+  <package id="EPiServer.CMS.Core" version="11.11.1" targetFramework="net461" />
+  <package id="EPiServer.Commerce.Core" version="13.0.0" targetFramework="net461" />
+  <package id="EPiServer.Framework" version="11.11.1" targetFramework="net461" />
+  <package id="EPiServer.Framework.AspNet" version="11.11.1" targetFramework="net461" />
   <package id="Fare" version="2.1.1" targetFramework="net461" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
@@ -22,10 +22,10 @@
   <package id="Moq" version="4.10.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="Omnium" version="4.0.0" targetFramework="net461" />
-  <package id="Omnium.EPiServer.Commerce" version="12.2.0" targetFramework="net461" />
-  <package id="Omnium.Public" version="3.8.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net461" />
+  <package id="Omnium" version="5.0.3" targetFramework="net461" />
+  <package id="Omnium.EPiServer.Commerce" version="13.0.0" targetFramework="net461" />
+  <package id="Omnium.Public" version="4.0.2" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net461" />
@@ -46,6 +46,7 @@
   <package id="System.Security.Principal.Windows" version="4.4.0" targetFramework="net461" />
   <package id="System.Threading.AccessControl" version="4.4.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="xunit" version="2.4.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net461" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net461" />
